--- a/README
+++ b/README
@@ -3,3 +3,11 @@ Coupal
 This repo contains server and web code
 Mobile code will be in another repo
 
+Setup:
+$ pip install virtualenv  # install virtual env for python environment management
+$ virtualenv env  # create a python environment
+$ source env/bin/activate  #turn the python virtual environment on
+$ deactivate # turn off virtual environment
+$ pip install flask # install flask framework
+
+
