move index.html to templates

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Coupal
 ======
+[Official Coupal Website](http://coupal-co-2014.appspot.com/)
+
 This repo contains server and web code
 Mobile code will be in another repo
 
@@ -9,5 +11,3 @@ $ virtualenv env  # create a python environment
 $ source env/bin/activate  #turn the python virtual environment on
 $ deactivate # turn off virtual environment
 $ pip install flask # install flask framework
-
-
